# DataMaster-MCP

./: .env.example  API数据存储功能使用指南.md  API数据持久化存储使用示例.md  API数据提取功能优化后使用指南.md  API数据提取功能优化方案.md  API连接器功能使用指南.md  API连接器功能扩展方案.md  CHANGELOG.md  DOCUMENTATION_INDEX.md  GitHub 信息.txt  INSTALLATION_AND_USAGE_GUIDE.md  LOCAL_TEST_GUIDE.md  MongoDB连接问题完整解决方案.md  MySQL驱动问题解决方案.md  PYPI_RELEASE_GUIDE.md  README.md  README_EN.md  SuperDataAnalysis_MCP_开发方案.md  VERSION.md  check_db.py  debug_version.py  demo_cleanup_workflow.py  exported_data.xlsx  fix_mysql_drivers.py  fix_report.md  generate_client_config.py  main.py  mysql_driver_fix.py  pyproject.toml  requirements.txt  setup.py  test_alarm_data.csv  test_data.csv  test_excel_sample.csv  test_external_import.csv  test_sample.csv  verify_pypi_release.py  开发者文档.md  开发进度报告.md  数据库工具问题修复报告.md  (+7 more)
.vercel/: project.json
build-related/: .gitignore  BUILD.md  CLIENT_CONFIG_GUIDE.md  DEVELOPMENT_WORKFLOW.md  INSTALLATION_AND_USAGE_GUIDE.md  LICENSE  MANIFEST.in  PYPI_PACKAGE_MANAGEMENT_GUIDE.md  QUICK_START.md  RENAME_SUMMARY.md  claude_desktop_config_example.json  install_build_tools.py  pyproject.toml  项目结构说明.md
build-related/scripts/: setup_dev.py
config/: api_config_manager.py  api_connector.py  api_data_storage.py  config_manager.py  data_transformer.py  database_config.json  database_manager.py
datamaster_mcp/: __init__.py  main.py
datamaster_mcp/config/: api_config.json  api_config_manager.py  api_connector.py  api_data_storage.py
scripts/: release.py
source-code/: test_mcp_server.py  test_package.py
source-code/datamaster_mcp/: main.py  模块化重构方案.md  重构示例-数据库模块.py  重构示例-精简main.py
source-code/datamaster_mcp/config/: database_manager.py
source-code/datamaster_mcp/core/: __init__.py  api_manager.py  data_analysis.py  data_processing.py  database.py
source-code/datamaster_mcp/data/: analysis.db
source-code/datamaster_mcp/data/api_storage/: metadata.db
source-code/datamaster_mcp/tools/: __init__.py
source-code/datamaster_mcp/utils/: __init__.py
source-code/test/: test_complex_json.json
source-code/test_data/: sample_data.csv  sample_data.xlsx
superdataanalysis_mcp/: __init__.py  main.py
superdataanalysis_mcp/config/: api_config.json  api_config_manager.py
tools/: start_mcp_server.py
